prevent overflow-x on mobile

--- a/src/assets/scss/layout/_wrapper.scss
+++ b/src/assets/scss/layout/_wrapper.scss
@@ -16,6 +16,7 @@
 		width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
+		overflow-x: hidden;
 
 		&:before {
 			content: '';
